k8s/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            app: gateway
    template:
        metadata:
            labels:
                app: gateway
        spec:
            restartPolicy: Always
            containers:
                -   name: gateway
                    image: gateway:1.0
                    imagePullPolicy: Never
                    resources:
                        requests:
                            memory: "192Mi"
                            cpu: "500m"
                        limits:
                            memory: "256Mi"
                            cpu: "1000m"
                    ports:
                        -   containerPort: 9090
