k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
    name: gateway
spec:
    type: NodePort
    selector:
        app: gateway
    ports:
        -   protocol: TCP
            port: 9090
            targetPort: 9090
            nodePort: 30001
