k8s/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-gateway
    annotations:
        ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        -   http:
                paths:
                    -   backend:
                            service:
                                name: gateway
                                port:
                                    number: 9090
                        path: /
                        pathType: ImplementationSpecific
